[package]
name = "cargo-ament-build"
version = "0.1.10"
authors = ["Nikolai Morin <nnmmgit@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Cargo plugin for use with colcon workspaces"
repository = "https://github.com/ros2-rust/cargo-ament-build"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["ros2", "colcon", "ament"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo-manifest = "0.19"
pico-args = "0.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "aarch64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
